# rosa_uav

./: README.md  UAV_AGENT_SUMMARY.md  USAGE_GUIDE.md  demo.sh  demo_uav_agent.py  keyboard-mavsdk-test.py  run_uav_agent.py  simple_uav_agent.py  test_uav_llm.py  test_uav_minimal.py  test_uav_simple.py  test_uav_standalone.py  uav_camera_det.py
src/drone_agent/: .env  .env.example  CMakeLists.txt  main.md  package.xml  requirements.txt  setup.py
src/drone_agent/install/: local_setup.sh  setup.sh
src/drone_agent/install/drone_agent/lib/drone_agent/: drone_agent.py  help.py
src/drone_agent/install/drone_agent/lib/drone_agent/tools/: drone.py
src/drone_agent/install/drone_agent/share/drone_agent/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/drone_agent/install/drone_agent/share/drone_agent/cmake/: drone_agentConfig.cmake
src/drone_agent/launch/: agent.launch.py
src/drone_agent/log/: latest_build
src/drone_agent/scripts/: MOVEMENT_FIX.md  MULTI_STEP_FLIGHT_FIXES.md  llm.py  prompts.py  test_movement_fix.py  test_multi_step_flight.py  verify_altitude_fix.py
src/jpl_rosa.egg-info/: PKG-INFO
src/uav_agent/: CMakeLists.txt  README.md  setup.py  simple_uav_agent.py  test_altitude_takeoff.py  test_complete_flight.py  test_direct_ros2.py  test_direct_tools.py  test_final_fix.py  test_fixed_ros2_movement.py  test_fixed_uav.py  test_landing_fix.py  test_landing_only.py  test_mavsdk_direct.py  test_movement_fix.py  test_offboard_movement.py  test_ros2_movement.py  test_ros2_uav.py  test_simple_uav.py  test_tool_loading.py  test_uav_connection.py
src/uav_agent/install/: local_setup.sh  setup.sh
src/uav_agent/install/uav_agent/lib/uav_agent/: uav_agent.py
src/uav_agent/install/uav_agent/share/uav_agent/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/uav_agent/launch/: agent.launch  uav_agent.launch.py
src/uav_agent/log/: latest_build
src/uav_agent/uav_agent/: help.py  llm.py  prompts.py  uav_agent.py
src/uav_agent/uav_agent/tools/: uav.py  uav_mavlink.py  uav_offboard.py  uav_ros2.py  uav_ros2_move.py  uav_simple.py
(+3 files in other folders)
