<?xml version="1.0"?>
<package format="3">
    <name>drone_agent</name>
    <version>0.0.1</version>
    <description>Embodied ROSA agent for drone/UAV control using MAVSDK.</description>

    <maintainer email="your.email@example.com">Your Name</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>